--- a/apps/aggregator/package.json
+++ b/apps/aggregator/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zkvot-backend",
+  "name": "zkvot-aggregator",
   "version": "1.0.0",
   "description": "",
   "type": "module",
@@ -13,11 +13,9 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.3",
-    "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "mongoose": "^8.7.2",
     "o1js": "^2",
-    "path": "^0.12.7",
     "sharp": "^0.33.5",
     "zkvot-core": "*"
   },
