--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -23,7 +23,8 @@
     "o1js": "^2",
     "path": "^0.12.7",
     "sharp": "^0.33.5",
-    "zkvot-core": "*"
+    "zkvot-core": "*",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@repo/config": "*",
