--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "level": "^9.0.0",
     "mongoose": "^8.7.2",
     "o1js": "^2",
     "path": "^0.12.7",
