--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -17,6 +17,7 @@
     "canvas-confetti": "^1.9.3",
     "comlink": "^4.4.1",
     "copy-to-clipboard": "^3.3.3",
+    "croner": "^9.0.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.11.9",
     "js-sha256": "^0.11.0",
