--- a/apps/aggregator/tsconfig.json
+++ b/apps/aggregator/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@repo/config/typescript/tsconfig.backend.json",
+  "extends": "@repo/config/typescript/tsconfig.aggregator.json",
   "compilerOptions": {
     "outDir": "./build",
     "rootDir": "./src",
