--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -12,8 +12,8 @@
   "author": "node101",
   "license": "ISC",
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.701.0",
     "avail-js-sdk": "^0.3.0",
+    "@aws-sdk/client-s3": "^3.701.0",
     "body-parser": "^1.20.3",
     "cluster": "^0.7.7",
     "cors": "^2.8.5",
@@ -24,6 +24,7 @@
     "o1js": "^2",
     "path": "^0.12.7",
     "sharp": "^0.33.5",
+    "zkvot-backend-utils": "*",
     "zkvot-core": "*",
     "zod": "^3.24.1"
   },
