--- a/packages/backend-utils/package.json
+++ b/packages/backend-utils/package.json
@@ -12,12 +12,11 @@
   },
   "devDependencies": {
     "@repo/config": "*",
+    "dotenv": "^16.4.7",
     "typescript": "^5.6.3"
   },
   "engines": {
     "node": ">=18.14.0"
-  },
-  "dependencies": {
   },
   "exports": {
     ".": {
